--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-python-telegram-bot==20.8
-requests
-python-dotenv
-APScheduler
+python-telegram-bot==20.7
+APScheduler==3.9.1
+requests==2.30.0
+python-dotenv==1.0.0
